plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.aegis'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2023.0.0")
}

dependencies {
    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
    
    // Caching
    implementation 'com.github.ben-manes.caffeine:caffeine'
    
    // Crypto & JWT
    implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
    
    // Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    
    // BlockHound
    testImplementation 'io.projectreactor.tools:blockhound-junit-platform:1.0.8.RELEASE'
    
    // Testcontainers
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'com.redis:testcontainers-redis:2.2.2'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        mavenBom "org.testcontainers:testcontainers-bom:1.19.7"
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += [
        '-XX:+AllowRedefinitionToAddDeleteMethods',
        '-XX:+EnableDynamicAgentLoading'
    ]
    exclude '**/*Base*.class'
}
